feat: Add comprehensive credit card analysis components

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "groq-sdk": "^0.37.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
