feat: Introduce dark mode, add new UI components for animated text, contact modal, processing view, and update existing components across the application and backend.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+# Email Configuration
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-specific-password
+SENDER_EMAIL=your-email@gmail.com
+RECIPIENT_EMAIL=your-receiving-email@example.com
