--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "d3": "^7.9.0",
     "groq-sdk": "^0.37.0",
+    "motion": "^12.23.26",
     "pdf-lib": "^1.17.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
