--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "d3": "^7.9.0",
     "groq-sdk": "^0.37.0",
     "motion": "^12.23.26",
