--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-# Email Configuration
+# Gemini API Key (required for AI features)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# CORS Origins (comma-separated or JSON array)
+ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:3000"]
+
+# Email Configuration (optional - for contact form)
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=your-email@gmail.com
