--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # CORS Origins (comma-separated or JSON array)
 ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:3000"]
 
-# Email Configuration (optional - for contact form)
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-specific-password
-SENDER_EMAIL=your-email@gmail.com
+# Email Configuration (Resend - https://resend.com)
+RESEND_API_KEY=re_your_api_key_here
+SENDER_EMAIL=onboarding@resend.dev
 RECIPIENT_EMAIL=your-receiving-email@example.com
